# ative-run

./: .dockerignore  .env.example  .env.production  .gitignore  DEPLOY.md  Dockerfile  README-DEPLOY.md  README-new.md  README-old.md  README.md  STRAVA_INTEGRATION.md  deploy.sh  docker-compose.yml  next.config.js  nixpacks.toml  package-lock.json  package-monorepo.json  package.json  pnpm-lock.yaml  setup-strava-webhook.sh  tailwind.config.ts  test-db-types.ts  test-manual.js  test-utils.mjs  training_analysis.md  turbo.json
app/: actions.ts  auth-actions.ts  globals.css  layout.tsx  page.tsx
apps/servico-ia/: main.py  pyproject.toml
apps/servico-ia/app/api/: users.py
backlog/: 1-exibir-nome-primeiro-ultimo.md  2-avatar-iniciais-2-caracteres.md  3-componentizar-dashboard.md  4-padronizacao-visual-onboarding-aleen.md  5-melhorias-ux-onboarding-aleen.md  6-profile-popup-modal-aleen.md  7-modulo-treino-completo.md  8-refinamento-ux-historico-treinos.md  9-popup-detalhes-treino-funcional.md
components/: auth-guard.tsx  auth-provider.tsx  debug-panel.tsx  password-change-modal.tsx
contexts/: MealConsumptionContext.tsx
docs/: DAY_SELECTOR_FINAL_REPORT.md  DAY_SELECTOR_IMPLEMENTATION.md  REALTIME_MEAL_CONSUMPTION.md  architect.md  brief.md  prd.md
hooks/: useWeightProgress.ts
lib/: admin-mock-data.ts  auth.ts  database.types.ts  error-boundary.tsx  onboarding.ts  strava.ts  supabase-admin.ts  supabase-server.ts  supabase.ts  training.ts
public/: no-cache.js
scripts/: FAVICONS_README.md  create-onboarding-questions.sql  create-storage-bucket.sql  (+5 more)
(+206 files in other folders)
