[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servico-ia"
version = "1.0.0"
description = "Ative Run - Serviço de IA (FastAPI + CrewAI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "crewai>=0.1.0",
    "openai>=1.0.0",
    "supabase>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
    "pydantic-settings>=2.1.0",
    "psycopg2-binary>=2.9.0",
    "stripe>=7.0.0",
    "evolution-api-client>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
